--- a/paquescolar-web/src/main/webapp/app/con03GraficoAvanceFeria.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con03GraficoAvanceFeria.xhtml
@@ -67,7 +67,7 @@
                                         <p:column headerText="Tipo Empresa">
                                             <p:outputLabel value="#{var.nombretipoEmpresa}"/>
                                         </p:column>
-                                        <p:column headerText="Monto Adjudicado ($)" style="text-align: right;">
+                                        <p:column headerText="Monto Adjudicado ($)" styleClass="numero">
                                             <p:outputLabel value="#{var.totalFormatedo}"/>
                                         </p:column>
                                     </p:dataTable>
@@ -83,7 +83,7 @@
                                         <p:column headerText="Tipo Empresa">
                                             <p:outputLabel value="#{var.nombretipoEmpresa}"/>
                                         </p:column>
-                                        <p:column headerText="Monto Adjudicado ($)" style="text-align: right;">
+                                        <p:column headerText="Monto Adjudicado ($)" styleClass="numero">
                                             <p:outputLabel value="#{var.totalFormatedo}"/>
                                         </p:column>
                                     </p:dataTable>
@@ -100,7 +100,7 @@
                                         <p:column headerText="Tipo Empresa">
                                             <p:outputLabel value="#{var.nombretipoEmpresa}"/>
                                         </p:column>
-                                        <p:column headerText="Monto Adjudicado ($)" style="text-align: right;">
+                                        <p:column headerText="Monto Adjudicado ($)" styleClass="numero">
                                             <p:outputLabel value="#{var.totalFormatedo}"/>
                                         </p:column>
                                     </p:dataTable>
