--- a/paquescolar-web/src/main/webapp/app/edit06Seguimiento.xhtml
+++ b/paquescolar-web/src/main/webapp/app/edit06Seguimiento.xhtml
@@ -154,13 +154,13 @@
                             <p:column headerText="Descripción">
                                 <p:outputLabel value="#{detalle.consolidadoEspTec}"  id="descripcionItem"/>
                             </p:column>
-                            <p:column headerText="Cantidad" width="70" style="text-align: right;">
+                            <p:column headerText="Cantidad" width="70" styleClass="numero">
                                 <p:outputLabel value="#{detalle.cantidadEntregada}"  id="cantidadItem"/>
                             </p:column>
                             <p:column headerText="Observación" >
                                 <p:outputLabel value="#{detalle.observaciones}"  id="observacionItem"/>
                             </p:column>
-                            <p:column headerText="Tipo Entrega" style="text-align: right;" width="100">
+                            <p:column headerText="Tipo Entrega" styleClass="numero" width="100">
                                 <p:outputLabel value="#{detalle.tipoEntrega}"  id="tipoentregaItem"/>
                             </p:column>
                             <p:column width="12">
