--- a/paquescolar-web/src/main/webapp/app/reg02ReservaFondos.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02ReservaFondos.xhtml
@@ -79,7 +79,7 @@
                     <p:panelGrid id="pnlSaldos" columns="1" layout="grid" styleClass="form-group ui-panelgrid-blank" style="margin: 0 auto;">
                         <p:panelGrid styleClass="companyHeaderGrid">
                             <p:row>
-                                <p:column style="text-align: right;">
+                                <p:column styleClass="numero">
                                     <p:outputLabel value="a. Montol total asignado:  $"/>
                                 </p:column>
                                 <p:column style="text-align: right">
@@ -88,7 +88,7 @@
                                 <p:column />
                             </p:row>
                             <p:row>
-                                <p:column style="text-align: right;">
+                                <p:column styleClass="numero">
                                     <p:outputLabel value="b. Adjudicación acumulada:  $" />
                                 </p:column>
                                 <p:column style="text-align: right">
@@ -97,7 +97,7 @@
                                 <p:column />
                             </p:row>
                             <p:row>
-                                <p:column style="text-align: right;">
+                                <p:column styleClass="numero">
                                     <p:outputLabel value="c. Adjudicacion actual:  $" />
                                 </p:column>
                                 <p:column style="text-align: right">
@@ -111,7 +111,7 @@
                                 </p:column>
                             </p:row>
                             <p:row>
-                                <p:column style="text-align: right;">
+                                <p:column styleClass="numero">
                                     <p:outputLabel value="d. Saldo:  $"/>
                                 </p:column>
                                 <p:column style="text-align: right; font-weight: bold">
@@ -141,7 +141,7 @@
                     <p:panelGrid columns="1" layout="grid" styleClass="form-group ui-panelgrid-blank" style="margin: 0 auto;">
                         <p:panelGrid styleClass="companyHeaderGrid">
                             <p:row>
-                                <p:column style="text-align: right;">
+                                <p:column styleClass="numero">
                                     <p:outputLabel value="a. Capacidad Calificada:" />
                                 </p:column>
                                 <p:column style="text-align: right">
@@ -150,7 +150,7 @@
                                 <p:column />
                             </p:row>
                             <p:row>
-                                <p:column style="text-align: right;">
+                                <p:column styleClass="numero">
                                     <p:outputLabel value="b. Capacidad. Adjudicada" />
                                 </p:column>
                                 <p:column style="text-align: right">
@@ -159,7 +159,7 @@
                                 <p:column />
                             </p:row>
                             <p:row>
-                                <p:column style="text-align: right;">
+                                <p:column styleClass="numero">
                                     <p:outputLabel value="c. Adjudicación Actual" />
                                 </p:column>
                                 <p:column style="text-align: right">
@@ -173,7 +173,7 @@
                                 </p:column>
                             </p:row>
                             <p:row>
-                                <p:column style="text-align: right;">
+                                <p:column styleClass="numero">
                                     <p:outputLabel value="d. Saldo de Capacidad"/>
                                 </p:column>
                                 <p:column style="text-align: right; font-weight: bold">
