--- a/paquescolar-web/src/main/webapp/app/comunes/fragmentos/pagoProveedores/planillaPago.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/fragmentos/pagoProveedores/planillaPago.xhtml
@@ -82,27 +82,27 @@
                     <p:column headerText="Razon Social">
                         <h:outputText value="#{detalle.idDetalleDocPago.idDetRequerimiento.razonSocial}"/>
                     </p:column>
-                    <p:column headerText="Cant. Original" style="text-align: right;" width="45" rendered="false">
+                    <p:column headerText="Cant. Original" styleClass="numero" width="45" rendered="false">
                         <h:outputText value="#{detalle.cantidadOriginal}">
                             <f:convertNumber pattern="#,##0"/>
                         </h:outputText>
                     </p:column>
-                    <p:column headerText="Monto Original ($)" style="text-align: right;" width="75" rendered="false">
+                    <p:column headerText="Monto Original ($)" styleClass="numero" width="75" rendered="false">
                         <h:outputText value="#{detalle.montoOriginal}">
                             <f:convertNumber pattern="$ #,##0.00"/>
                         </h:outputText>
                     </p:column>
-                    <p:column headerText="Cant. Actual" style="text-align: right;" width="45">
+                    <p:column headerText="Cant. Actual" styleClass="numero" width="45">
                         <h:outputText value="#{detalle.cantidadActual}">
                             <f:convertNumber pattern="#,##0"/>
                         </h:outputText>
                     </p:column>
-                    <p:column headerText="Monto Actual ($)" style="text-align: right;" width="75">
+                    <p:column headerText="Monto Actual ($)" styleClass="numero" width="75">
                         <h:outputText value="#{detalle.montoActual}">
                             <f:convertNumber pattern="$ #,##0.00"/>
                         </h:outputText>
                     </p:column>
-                    <p:column headerText="Monto Renta ($)" style="text-align: right;" width="70" rendered="#{pagoProveedoresController.showChequeRenta}">
+                    <p:column headerText="Monto Renta ($)" styleClass="numero" width="70" rendered="#{pagoProveedoresController.showChequeRenta}">
                         <h:outputText value="#{detalle.idDetalleDocPago.montoRenta}">
                             <f:convertNumber pattern="$ #,##0.00"/>
                         </h:outputText>
@@ -129,27 +129,27 @@
                         <p:column colspan="5" style="text-align:right">
                             <h:outputText value="Totales" />
                         </p:column>
-                        <p:column style="text-align: right;" rendered="false">
+                        <p:column styleClass="numero" rendered="false">
                             <h:outputText value="#{pagoProveedoresController.cantidadOriginalTotal}" style="font-weight: bold;">
                                 <f:convertNumber pattern="#,##0"/>
                             </h:outputText>
                         </p:column>
-                        <p:column style="text-align: right;" rendered="false">
+                        <p:column styleClass="numero" rendered="false">
                             <h:outputText value="#{pagoProveedoresController.montoOriginalTotal}" style="text-align: right; font-weight: bold;">
                                 <f:convertNumber pattern="$ #,##0.00"/>
                             </h:outputText>
                         </p:column>
-                        <p:column style="text-align: right;">
+                        <p:column styleClass="numero">
                             <h:outputText value="#{pagoProveedoresController.cantidadActualTotal}" style="font-weight: bold;">
                                 <f:convertNumber pattern="#,##0"/>
                             </h:outputText>
                         </p:column>
-                        <p:column style="text-align: right;">
+                        <p:column styleClass="numero">
                             <h:outputText value="#{pagoProveedoresController.montoActualTotal}" style="text-align: right; font-weight: bold;">
                                 <f:convertNumber pattern="$ #,##0.00"/>
                             </h:outputText>
                         </p:column>
-                        <p:column style="text-align: right;" rendered="#{pagoProveedoresController.showChequeRenta}">
+                        <p:column styleClass="numero" rendered="#{pagoProveedoresController.showChequeRenta}">
                             <h:outputText value="#{pagoProveedoresController.montoRentaTotal}" style="text-align: right; font-weight: bold;">
                                 <f:convertNumber pattern="$ #,##0.00"/>
                             </h:outputText>
