--- a/paquescolar-web/src/main/webapp/app/reg07PlanillaPago.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07PlanillaPago.xhtml
@@ -79,31 +79,31 @@
                             <p:column headerText="Num. Req." width="90">
                                 <p:outputLabel value="#{req.formatoRequerimiento}"/>
                             </p:column>
-                            <p:column headerText="Monto ($)" width="70" style="text-align: right;">
+                            <p:column headerText="Monto ($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoTotal}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
-                            <p:column headerText="# Planillas" width="50" style="text-align: right;">
+                            <p:column headerText="# Planillas" width="50" styleClass="numero">
                                 <h:outputText value="#{req.cantidadPlanilla}"/>
                             </p:column>
-                            <p:column headerText="Pagado ($)" width="70" style="text-align: right;">
+                            <p:column headerText="Pagado ($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoTotalPlanilla}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
-                            <p:column headerText="Pediente($)" width="70" style="text-align: right;">
+                            <p:column headerText="Pediente($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoTotal - req.montoTotalPlanilla}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
-                            <p:column headerText="Reintegrar($)" width="70" style="text-align: right;">
+                            <p:column headerText="Reintegrar($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoReintegrar}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
 
-                            <p:column headerText="Saldo ($)" width="70" style="text-align: right;">
+                            <p:column headerText="Saldo ($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoTotal - req.montoTotalPlanilla - req.montoReintegrar}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
@@ -135,7 +135,7 @@
                             <p:column headerText="Estado" width="100" styleClass="colCenter">
                                 <p:outputLabel value="#{pla.idEstadoPlanilla eq 1 ? 'DIGITADA' : 'PAGADA'}"/>
                             </p:column>
-                            <p:column headerText="Monto Total" width="70" style="text-align: right;">
+                            <p:column headerText="Monto Total" width="70" styleClass="numero">
                                 <p:outputLabel value="#{pla.montoTotal}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </p:outputLabel>
@@ -222,7 +222,7 @@
                 <p:column headerText="Núm. Cuenta">
                     <h:outputText value="#{detalleRequerimiento.numeroCuenta}"/>
                 </p:column>
-                <p:column headerText="Monto Contrato" style="text-align: right;" width="60">
+                <p:column headerText="Monto Contrato" styleClass="numero" width="60">
                     <h:outputText value="#{detalleRequerimiento.montoTotal}">
                         <f:convertNumber pattern="$ #,##0.00"/>
                     </h:outputText>
