--- a/paquescolar-web/src/main/webapp/app/reg07PlanillaPagoLst.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07PlanillaPagoLst.xhtml
@@ -69,7 +69,8 @@
                         <!-- REQUERIMIENTO DE FONDOS -->
                         <p:dataTable value="#{planillaPagoLstMB.lstResumenRequerimiento}" var="req" 
                                      rowKey="#{req.idRequerimiento}" style="margin-bottom:0" rowIndexVar="id"
-                                     rendered="#{planillaPagoLstMB.seleccionRequerimiento}">
+                                     rendered="#{planillaPagoLstMB.seleccionRequerimiento}"
+                                     rowStyleClass="#{(req.montoTotal - req.montoTotalPlanilla - req.montoReintegrar) gt 0 ? null : 'filaCompletada'}">
 
                             <p:column headerText="id Req." width="35" >
                                 <p:outputLabel value="#{req.idRequerimiento}"/>
@@ -80,38 +81,38 @@
                             <p:column headerText="Num. Req." width="90">
                                 <p:outputLabel value="#{req.formatoRequerimiento}"/>
                             </p:column>
-                            <p:column headerText="Monto ($)" width="70" style="text-align: right;">
+                            <p:column headerText="Monto ($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoTotal}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
-                            <p:column headerText="# Planillas" width="50" style="text-align: right;">
+                            <p:column headerText="# Planillas" width="50" styleClass="numero">
                                 <h:outputText value="#{req.cantidadPlanilla}"/>
                             </p:column>
-                            <p:column headerText="Pagado ($)" width="70" style="text-align: right;">
+                            <p:column headerText="Pagado ($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoTotalPlanilla}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
-                            <p:column headerText="Pediente($)" width="70" style="text-align: right;">
+                            <p:column headerText="Pediente($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoTotal - req.montoTotalPlanilla}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
-                            <p:column headerText="Reintegrar($)" width="70" style="text-align: right;">
+                            <p:column headerText="Reintegrar($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoReintegrar}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
 
-                            <p:column headerText="Saldo ($)" width="70" style="text-align: right;">
+                            <p:column headerText="Saldo ($)" width="70" styleClass="numero">
                                 <h:outputText value="#{req.montoTotal - req.montoTotalPlanilla - req.montoReintegrar}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column>
 
-                            <p:column headerText="Seleccionar" width="70" style="text-align: center;">
-                                <p:commandLink action="#{planillaPagoLstMB.selectRequerimiento}" update="dlgEntidadesFinancieras dlgTipoPlanilla">
+                            <p:column headerText="Seleccionar" width="60" style="text-align: center;">
+                                <p:commandLink action="#{planillaPagoLstMB.selectRequerimiento}" update="dlgEntidadesFinancieras dlgTipoPlanilla" disabled="#{(req.montoTotal - req.montoTotalPlanilla - req.montoReintegrar) gt 0 ? false : true}">
                                     <f:setPropertyActionListener value="#{req.idRequerimiento}" target="#{planillaPagoLstMB.idReq}"/> 
                                     <i class="fa fa-hand-o-right blue" style="font-size: 17px;"></i>
                                 </p:commandLink> 
@@ -136,7 +137,7 @@
                             <p:column headerText="Estado" width="100" styleClass="colCenter">
                                 <p:outputLabel value="#{pla.idEstadoPlanilla eq 1 ? 'DIGITADA' : 'PAGADA'}"/>
                             </p:column>
-                            <p:column headerText="Monto Total" width="70" style="text-align: right;">
+                            <p:column headerText="Monto Total" width="70" styleClass="numero">
                                 <p:outputLabel value="#{pla.montoTotal}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </p:outputLabel>
