--- a/paquescolar-web/src/main/webapp/app/rpt03ResumenContrataciones.xhtml
+++ b/paquescolar-web/src/main/webapp/app/rpt03ResumenContrataciones.xhtml
@@ -76,10 +76,10 @@
                         <p:column headerText="#{bundle['tabla.nit']}">
                             <p:outputLabel value="#{prov.numeroNit}"/>
                         </p:column>
-                        <p:column headerText="#{bundle['tabla.cantidad']}" style="text-align: right;">
+                        <p:column headerText="#{bundle['tabla.cantidad']}" styleClass="numero">
                             <p:outputLabel value="#{prov.cantidadContrato}"/>
                         </p:column>
-                        <p:column headerText="#{bundle['tabla.monto']}" style="text-align: right;">
+                        <p:column headerText="#{bundle['tabla.monto']}" styleClass="numero">
                             <h:outputText value="#{prov.montoContrato}">
                                 <f:convertNumber pattern="#,##0.00"/>
                             </h:outputText>
@@ -89,12 +89,12 @@
                             <p:column colspan="4" style="text-align:right">
                                 <h:outputText value="Total:" />
                             </p:column>
-                            <p:column style="text-align: right;">
+                            <p:column styleClass="numero">
                                 <h:outputText value="#{reportesWebController.cantidadTotal}">
                                     <f:convertNumber type="currency" />
                                 </h:outputText>
                             </p:column>
-                            <p:column style="text-align: right;">
+                            <p:column styleClass="numero">
                                 <h:outputText value="#{reportesWebController.montoTotal}">
                                     <f:convertNumber type="currency" currencySymbol="$" />
                                 </h:outputText>
